helm-chart/gitlab/ingress-gitlab.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gitlab.dodex.site
    secretName: app-tls
  rules:
  - host: gitlab.dodex.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
---
